--- a/digital-clock.html
+++ b/digital-clock.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="css/digital-clock.css">
+  <link rel="stylesheet" type="text/css" href="digital-clock.css">
 </head>
 <body>
 
